| Bug #52172 | test binlog.binlog_index needs --skip-core-file to avoid leaving core files | ||
|---|---|---|---|
| Submitted: | 18 Mar 2010 10:24 | Modified: | 16 Nov 2010 2:01 |
| Reporter: | Mattias Jonsson | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Tests | Severity: | S7 (Test Cases) |
| Version: | 5.1 | OS: | Any |
| Assigned to: | Tor Didriksen | CPU Architecture: | Any |
[18 Mar 2010 10:53]
Sveta Smirnova
Thank you for the report. Verified as described with 5.1 tree. Set to D2, because can easily lead to out of space on Mac
[17 Sep 2010 11:40]
Sveta Smirnova
Bug #56837 was marked as duplicate of this one.
[21 Sep 2010 16:00]
Anitha Gopi
Tor, Assigning to you as per your discussion with Luis Anitha
[18 Oct 2010 11:36]
Tor Didriksen
Pushed to 5.1-bugteam 5.5-bugteam trunk-merge
[19 Oct 2010 7:07]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/121058 3534 Tor Didriksen 2010-10-19 Bug#52172 post-push fix: init auto-variable to NULL
[19 Oct 2010 7:19]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/121059 3251 Tor Didriksen 2010-10-19 [merge] automerge from 5.1-bugteam: Bug#52172 post-push fix: init auto-variable to NULL
[29 Oct 2010 15:37]
Paul DuBois
Changes to test suite. No changelog entry needed.
[13 Nov 2010 16:09]
Bugs System
Pushed into mysql-trunk 5.6.99-m5 (revid:alexander.nozdrin@oracle.com-20101113155825-czmva9kg4n31anmu) (version source revid:alexander.nozdrin@oracle.com-20101113152450-2zzcm50e7i4j35v7) (merge vers: 5.6.1-m4) (pib:21)
[13 Nov 2010 16:40]
Bugs System
Pushed into mysql-next-mr (revid:alexander.nozdrin@oracle.com-20101113160336-atmtmfb3mzm4pz4i) (version source revid:vasil.dimov@oracle.com-20100629074804-359l9m9gniauxr94) (pib:21)
[18 Nov 2010 15:55]
Bugs System
Pushed into mysql-5.1 5.1.54 (revid:build@mysql.com-20101118153531-693taxtxyxpt037i) (version source revid:build@mysql.com-20101118153531-693taxtxyxpt037i) (merge vers: 5.1.54) (pib:21)
[16 Dec 2010 22:33]
Bugs System
Pushed into mysql-5.5 5.5.9 (revid:jonathan.perkin@oracle.com-20101216101358-fyzr1epq95a3yett) (version source revid:jonathan.perkin@oracle.com-20101216101358-fyzr1epq95a3yett) (merge vers: 5.5.9) (pib:24)

Description: When running 'make test-bt' on my mac the /core directory is filled with a lot of core-files, due to some test crashes the server to verify things. But they are not run with --skip-core-file which will leave core-files even after a successful test result. How to repeat: (at least on mac os x 10.6, mysql-5.1-bugteam, omer@mysql.com-20100318064207-l3ap0mpxt510b4n3) run './mtr binlog_index' and look in the /core directory... Suggested fix: add a -{master|slave}.opt file with: --skip-core-file on all tests that intentionally crashes the server.